# PRISM

./: .gitignore  DEPLOYMENT_GUIDE.md  LICENSE  Makefile  README.md  VERCEL_SETUP.md  docker-compose.dev.yml  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  performance.md  security_vulnerability.md
.github/workflows/: ci.yml  deploy-vercel.yml
.kiro/specs/data-science-workflow/: design.md  requirements.md  tasks.md
.kiro/specs/database-table-sync/: design.md  requirements.md  tasks.md
.kiro/specs/landing-page-enhancement/: design.md  requirements.md  tasks.md
.kiro/specs/prism-rockfall-prediction/: design.md  requirements.md  tasks.md  test.md
database/neo4j/: init.cypher
database/postgis/: init.sql
database/postgis/migrations/: 001_data_science_workflow.sql
database/timescaledb/: init.sql
docs/: README.md
k8s/: api-gateway.yaml  configmap.yaml  deployment.yaml  namespace.yaml
k8s/monitoring/: grafana-dashboards.yaml  prometheus-config.yaml
mlops/ci-cd/github-actions/: model-training.yml
mlops/mlflow/: Dockerfile.mlflow  Dockerfile.registry  docker-compose.yml  requirements.txt
mlops/mlflow/src/model_registry/: deployment_manager.py  main.py  model_lifecycle.py
mlops/scripts/: deploy_models.py
monitoring/: prometheus.yml
services/ai-pipeline/: DATA_REQUIREMENTS.md  jest.config.js  package-lock.json  package.json  tsconfig.json
services/ai-pipeline/src/: index.ts
services/ai-pipeline/src/__tests__/: setup.ts
services/ai-pipeline/src/features/: EnvironmentalFeatures.ts  FeatureEngineeringPipeline.ts  GeomorphologicalFeatures.ts  SpatialFeatures.ts  TemporalFeatures.ts
services/ai-pipeline/src/models/: BaselineModels.ts  BayesianEnsemble.ts  ExplainableAI.ts  ExplanationService.ts  GraphNeuralNetwork.ts  ModelPipeline.ts  PhysicsInformedNeuralNetworks.ts  README.md  SpatioTemporalModels.ts
services/ai-pipeline/src/preprocessing/: DataPreprocessor.ts  SyntheticDataGenerator.ts
services/ai-pipeline/src/routes/: explanations.ts
services/alert-management/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
services/alert-management/src/: index.ts
services/alert-management/src/__tests__/: AlertManagementService.test.ts  integration.test.ts  setup.ts
services/alert-management/src/config/: index.ts
services/alert-management/src/messaging/: KafkaConsumer.ts
services/alert-management/src/repositories/: AlertRepository.ts
services/alert-management/src/routes/: alertRoutes.ts  healthRoutes.ts
services/alert-management/src/services/: AlertManagementService.ts  DeduplicationService.ts  EscalationService.ts  NotificationService.ts  PrescriptiveActionEngine.ts
services/alert-management/src/utils/: logger.ts
services/api-gateway/: Dockerfile  Dockerfile.dev  README.md  package.json
services/api-gateway/src/: index.ts
services/api-gateway/src/__tests__/: integrations.test.ts
services/api-gateway/src/config/: index.ts
services/api-gateway/src/docs/: openapi.yaml
services/api-gateway/src/integrations/: blast-planning.ts  fleet-management.ts  water-management.ts
services/api-gateway/src/middleware/: auth.ts  errorHandler.ts  logging.ts
services/api-gateway/src/routes/: auth.ts  docs.ts  health.ts  integrations.ts
services/api-gateway/src/utils/: logger.ts
services/data-ingestion/: Dockerfile  jest.config.js  package-lock.json  package.json
services/data-ingestion/src/: index.ts
services/data-ingestion/src/__tests__/: setup.ts
services/data-ingestion/src/config/: index.ts
services/data-science-backend/: .env.example  .gitignore  README.md  REPORTS_IMPLEMENTATION_SUMMARY.md  jest.config.js  list-all-tables.js  package-lock.json  package.json  show-tables-direct.js  show-tables.js  tsconfig.json
services/data-science-backend/reports/: report_3bc2a09f-695e-440b-a095-f894e5ae6871.html  report_b9283874-ae69-48ea-b8de-3484d7ce8460.html  report_ea0c09be-c618-408a-9817-0d00329d73bd.html
services/data-science-backend/src/: index.ts
services/digital-twin/: package-lock.json  package.json
services/hexapod-edge/: package-lock.json  package.json  platformio.ini  tsconfig.json
services/hexapod-edge/src/: index.ts
services/hexapod-mobile/: jest.config.js  package-lock.json  package.json
services/hexapod-mobile/ros2_ws/src/hexapod_mobile/: CMakeLists.txt  package.xml
services/hexapod-mobile/ros2_ws/src/hexapod_mobile/launch/: hexapod_mobile.launch.py
services/hexapod-mobile/src/: index.ts
services/mobile-app/: App.tsx  IMPLEMENTATION_SUMMARY.md  README.md  app.json  jest.config.js  package.json  tsconfig.json
services/mobile-app-new/: App-with-maps.tsx  App.tsx  app.json  package-lock.json  package.json
services/notification-service/: .env.production  README.md  app.py  render.yaml  start.sh
services/prism-mobile-final/: App.tsx  app.json  package-lock.json  package.json
services/python-ml-backend/: README.md  render.yaml  requirements.txt
services/python-ml-backend/app/: main.py
services/risk-assessment/: README.md  jest.config.js  package-lock.json  package.json
services/risk-assessment/src/: index.ts
services/supabase-backend/: .env.example  .env.production  package-lock.json  package.json  render.yaml
services/supabase-backend/src/: index.ts
services/user-management/: package.json
services/user-management/src/: index.ts
services/web-dashboard/: .env.example  .env.production  .gitignore  .vercelignore  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  MOBILE_OPTIMIZATION_SUMMARY.md  README.md  deploy.sh  index.html  lighthouserc.json  package-lock.json  package.json  render.yaml  tsconfig.json  tsconfig.server.json  vercel.json  vite.config.ts  vitest.config.ts
services/web-dashboard/server/: index.ts
services/web-dashboard/src/: App.tsx  index.css  main.tsx
shared/models/: package-lock.json  package.json  tsconfig.json
shared/models/src/: index.ts
(+329 files in other folders)
