<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hexapod_mobile</name>
  <version>1.0.0</version>
  <description>Mobile hexapod robot system with ROS2 navigation and computer vision for cliff-face inspection</description>
  <maintainer email="dev@prism-rockfall.com">PRISM Development Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Navigation dependencies -->
  <depend>nav2_common</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_recoveries</depend>
  <depend>nav2_bt_navigator</depend>

  <!-- Computer vision dependencies -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>compressed_image_transport</depend>
  <depend>camera_info_manager</depend>

  <!-- Hardware interface dependencies -->
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>

  <!-- Custom message dependencies -->
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>